--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,14 @@
   "author": "Ivan Bojovic",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
+    "email-validator": "^2.0.4",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.1",
-    "nodemon": "^1.3.3"
+    "mongoose-unique-validator": "^3.1.0",
+    "nodemon": "^1.3.3",
+    "password-validator": "^5.3.0"
   }
 }
