--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,11 @@
     "dotenv": "^16.0.1",
     "email-validator": "^2.0.4",
     "express": "^4.18.1",
+    "express-bouncer": "^0.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.1",
     "mongoose-unique-validator": "^3.1.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^1.3.3",
     "password-validator": "^5.3.0"
   }
