--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "express-bouncer": "^0.2.0",
+    "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.1",
     "mongoose-unique-validator": "^3.1.0",
